--- a/_posts/2025-06-26-pri.md
+++ b/_posts/2025-06-26-pri.md
@@ -1,19 +1,76 @@
 ---
-title: aqui coloque o titulo11
+title: Red Team: 000 - O que é Red Team ?
 date: 2025-06-26 16:30:00 -0300
-categories: [Tecnologia, Fundamentos]
+categories: [Red Team, Nivel 1]
 tags: [computador, hardware, software, tecnologia, como-funciona]
 description: uma descrição do titulo para criar.
 image:
-  path: /assets/img/avatarhacker.png
+  path: /assets/img/000/capa.webp
   alt: Ilustração de um computador moderno com elementos de código e processamento
-
 ---
 
-ola bom dia<br>
+## :dart: Artigo "Protocolos seguros | Implantação de uma rede segura | Parte I"
 
-coloque o conteudo aqui
+Este texto é dividido em duas partes e tem como objetivo descrever protocolos e processos para a implantação de uma rede mais segura. A intenção é fornecer informações sobre a utilização desses protocolos, a fim de manter os dados armazenados ou transferidos de forma segura, mantendo-nos atualizados sobre as medidas de segurança.
 
-quebra de linha
+## :dart: AUDIO E VÍDEO
 
----
+A transmissão de áudio e vídeo se tornou uma parte essencial da comunicação moderna. Com o aumento do uso de serviços de streaming, videoconferências e transmissões ao vivo, é crucial garantir a segurança desses dados sensíveis. Nesse contexto, o SRTP (Secure Real-Time Transport Protocol) e o RFC 3711 (Request for Comments 3711) são protocolos importantes que desempenham um papel fundamental na proteção da integridade e confidencialidade dos dados de áudio e vídeo durante a transmissão.
+
+### O que é o SRTP?
+
+O SRTP é um protocolo de transporte em tempo real, desenvolvido especificamente para garantir a segurança dos dados de áudio e vídeo durante a sua transmissão. Ele estabelece um canal seguro entre dois pontos, permitindo a criptografia e autenticação dos dados em tempo real. O SRTP é uma extensão do RTP (Real-Time Transport Protocol), que é amplamente utilizado para o transporte de dados de áudio e vídeo em redes IP.
+
+**Principais recursos do SRTP:**
+- **Criptografia:** O SRTP utiliza algoritmos criptográficos para proteger os dados em trânsito, garantindo que apenas os destinatários autorizados possam decifrar as informações transmitidas.
+- **Autenticação:** O SRTP permite a autenticação dos participantes envolvidos na comunicação, garantindo que os dados sejam originados por fontes confiáveis e não tenham sido alterados no caminho.
+- **Integridade:** O protocolo verifica a integridade dos dados transmitidos, detectando qualquer alteração ou corrupção dos pacotes durante a transmissão.
+- **Sincronização:** O SRTP mantém a sincronização entre o áudio e o vídeo, garantindo que ambos os fluxos permaneçam alinhados mesmo após a criptografia e a transmissão.
+
+**Importância do SRTP e RFC 3711:**
+
+A utilização do SRTP e a adesão ao RFC 3711 são essenciais para garantir a segurança das transmissões de áudio e vídeo. Esses protocolos protegem contra ameaças como interceptação não autorizada, manipulação dos dados transmitidos e ataques de negação de serviço. Além disso, eles permitem que organizações cumpram requisitos de conformidade e regulamentações relacionadas à proteção de dados, como a Lei Geral de Proteção de Dados (LGPD) e o Regulamento Geral de Proteção de Dados (GDPR).
+
+## :dart: TRANSFERÊNCIAS DE ARQUIVOS
+
+A transferência de arquivos é uma parte essencial da comunicação e colaboração modernas. No entanto, é importante garantir que os arquivos sejam transmitidos de forma segura, protegendo a confidencialidade e a integridade dos dados. Nesse contexto, os protocolos FTPS (FTP com TLS) e SFTP (FTP com SSH) desempenham um papel crucial na segurança das transferências de arquivos.
+
+### FTPS (FTP com TLS):
+
+O FTPS é uma extensão segura do protocolo FTP (File Transfer Protocol). Ele adiciona uma camada de segurança ao FTP por meio da utilização do TLS (Transport Layer Security) ou do SSL (Secure Sockets Layer). Essa camada adicional permite que os dados sejam criptografados durante a transferência, protegendo-os contra interceptação e acesso não autorizado.
+
+**Principais recursos do FTPS:**
+- **Autenticação:** O FTPS suporta a autenticação do servidor e do cliente, garantindo que apenas usuários autorizados possam acessar os arquivos e os serviços do servidor FTPS.
+- **Criptografia:** O uso do TLS ou SSL no FTPS permite a criptografia dos dados transmitidos, protegendo a confidencialidade das informações durante a transferência.
+- **Integridade:** O FTPS verifica a integridade dos arquivos transferidos, garantindo que não tenham sido modificados ou corrompidos durante a transmissão.
+- **Portabilidade:** O FTPS é suportado por uma ampla variedade de plataformas e sistemas operacionais, tornando-o uma opção acessível para transferência segura de arquivos.
+
+### SFTP (FTP com SSH):
+
+O SFTP é outro protocolo seguro de transferência de arquivos que combina as funcionalidades do FTP com a criptografia do SSH (Secure Shell). Ao utilizar o SSH como mecanismo de segurança, o SFTP protege os dados durante a transmissão, oferecendo recursos avançados de autenticação e criptografia.
+
+**Principais recursos do SFTP:**
+- **Autenticação robusta:** O SFTP utiliza autenticação baseada em chaves públicas e privadas, aumentando a segurança em comparação com as credenciais de login tradicionais.
+- **Criptografia end-to-end:** Todo o tráfego de dados no SFTP é criptografado, desde a autenticação até a transferência de arquivos, garantindo a confidencialidade dos dados em trânsito.
+- **Gerenciamento de sessão seguro:** O SFTP utiliza o SSH para estabelecer e gerenciar sessões seguras, protegendo contra ataques de interceptação e manipulação de dados.
+
+**Importância do FTPS e SFTP:**
+
+O uso do FTPS e do SFTP é fundamental para garantir a segurança das transferências de arquivos. Esses protocolos fornecem uma camada adicional de proteção por meio da criptografia e autenticação robusta, protegendo os dados contra acessos não autorizados e ameaças cibernéticas. Além disso, eles são amplamente suportados por diversas plataformas e sistemas operacionais, tornando-os uma escolha conveniente para organizações de todos os tamanhos.
+
+## :dart: SINCRONIZAÇÃO DE TEMPO
+
+A sincronização de tempo é uma parte fundamental das redes de computadores, garantindo que os dispositivos estejam alinhados em relação ao tempo. Isso é especialmente importante para tarefas como transações financeiras, registros de eventos e coordenação entre sistemas distribuídos. Nesse contexto, o NTP (Network Time Protocol) e o UDP 123 desempenham um papel crucial na sincronização precisa e confiável do tempo em redes.
+
+### O que é o NTP?
+
+O NTP é um protocolo de sincronização de tempo amplamente utilizado em redes de computadores. Ele foi projetado para manter a consistência do tempo em ambientes distribuídos, permitindo que dispositivos em uma rede sincronizem seus relógios com uma referência de tempo comum. O NTP utiliza algoritmos sofisticados para calcular e compensar a latência de rede, a variação de atraso e a deriva do relógio, garantindo uma sincronização precisa.
+
+**Principais recursos do NTP:**
+- **Hierarquia de servidores:** O NTP possui uma estrutura de servidores em várias camadas, onde os servidores de alta precisão se sincronizam com referências de tempo confiáveis, como relógios atômicos, e fornecem sincronização para servidores de níveis inferiores na hierarquia.
+- **Algoritmos de seleção de servidores:** O NTP utiliza algoritmos de seleção para identificar e escolher os servidores mais confiáveis e precisos na rede, levando em consideração fatores como latência e estabilidade.
+- **Sincronização contínua:** O NTP realiza ajustes contínuos no relógio dos dispositivos, compensando variações de tempo ao longo do tempo e mantendo a sincronização precisa.
+
+**Importância do NTP e UDP 123:**
+
+A sincronização precisa do tempo é essencial em diversas aplicações e ambientes de rede. O NTP e o UDP 123 permitem que os dispositivos sincronizem seus relógios com precisão, garantindo que eventos e transações ocorram no momento correto. Além disso, a sincronização do tempo é crucial para a segurança da rede, pois muitos sistemas e protocolos dependem de uma referência de tempo consistente para autenticação e registro de eventos.
