--- a/_posts/2025-06-26-BlueTeam000.md
+++ b/_posts/2025-06-26-BlueTeam000.md
@@ -1,7 +1,7 @@
 ---
-title: 000 - Implantação de uma rede segura_p1
+title: Blue Team: 000 - O que é Blue Team ?
 date: 2025-06-26 16:30:00 -0300
-categories: [Cyber, Fundamentos]
+categories: [Blue Team, Nivel 1]
 tags: [computador, hardware, software, tecnologia, como-funciona]
 description: uma descrição do titulo para criar.
 image:
