--- a/_posts/2025-06-26-BlueTeam000.md
+++ b/_posts/2025-06-26-BlueTeam000.md
@@ -1,5 +1,5 @@
 ---
-title: "Blue Team: 000 - O que é Blue Team ?"
+title: "000 Blue Team: O que é Blue Team ?"
 date: 2025-06-26 16:30:00 -0300
 categories: [Blue Team, Nivel 1]
 tags: [computador, hardware, software, tecnologia, como-funciona]
