--- a/_posts/2025-06-26-RedTeam000.md
+++ b/_posts/2025-06-26-RedTeam000.md
@@ -1,5 +1,5 @@
 ---
-title: "Red Team: 000 - O que é Red Team ?"
+title: "000 Red Team: O que é Red Team ?"
 date: 2025-06-26 16:30:00 -0300
 categories: [Red Team, Nivel 1]
 tags: [computador, hardware, software, tecnologia, como-funciona]
