--- a/_posts/2025-06-26-RedTeam000.md
+++ b/_posts/2025-06-26-RedTeam000.md
@@ -1,19 +1,19 @@
 ---
-title: "000 Red Team: O que é Red Team ?"
+title: "000 - Red Team: O que é Red Team ?"
 date: 2025-06-26 16:30:00 -0300
 categories: [Red Team, Nivel 1]
-tags: [computador, hardware, software, tecnologia, como-funciona]
+tags: [Teorica]
 description: uma descrição do titulo para criar.
 image:
   path: /assets/img/000/capa.webp
   alt: Ilustração de um computador moderno com elementos de código e processamento
 ---
 
-## :dart: Artigo "Protocolos seguros | Implantação de uma rede segura | Parte I"
+## Artigo "Protocolos seguros | Implantação de uma rede segura | Parte I"
 
 Este texto é dividido em duas partes e tem como objetivo descrever protocolos e processos para a implantação de uma rede mais segura. A intenção é fornecer informações sobre a utilização desses protocolos, a fim de manter os dados armazenados ou transferidos de forma segura, mantendo-nos atualizados sobre as medidas de segurança.
 
-## :dart: AUDIO E VÍDEO
+## AUDIO E VÍDEO
 
 A transmissão de áudio e vídeo se tornou uma parte essencial da comunicação moderna. Com o aumento do uso de serviços de streaming, videoconferências e transmissões ao vivo, é crucial garantir a segurança desses dados sensíveis. Nesse contexto, o SRTP (Secure Real-Time Transport Protocol) e o RFC 3711 (Request for Comments 3711) são protocolos importantes que desempenham um papel fundamental na proteção da integridade e confidencialidade dos dados de áudio e vídeo durante a transmissão.
 
@@ -31,7 +31,7 @@ O SRTP é um protocolo de transporte em tempo real, desenvolvido especificamente
 
 A utilização do SRTP e a adesão ao RFC 3711 são essenciais para garantir a segurança das transmissões de áudio e vídeo. Esses protocolos protegem contra ameaças como interceptação não autorizada, manipulação dos dados transmitidos e ataques de negação de serviço. Além disso, eles permitem que organizações cumpram requisitos de conformidade e regulamentações relacionadas à proteção de dados, como a Lei Geral de Proteção de Dados (LGPD) e o Regulamento Geral de Proteção de Dados (GDPR).
 
-## :dart: TRANSFERÊNCIAS DE ARQUIVOS
+## TRANSFERÊNCIAS DE ARQUIVOS
 
 A transferência de arquivos é uma parte essencial da comunicação e colaboração modernas. No entanto, é importante garantir que os arquivos sejam transmitidos de forma segura, protegendo a confidencialidade e a integridade dos dados. Nesse contexto, os protocolos FTPS (FTP com TLS) e SFTP (FTP com SSH) desempenham um papel crucial na segurança das transferências de arquivos.
 
@@ -58,7 +58,7 @@ O SFTP é outro protocolo seguro de transferência de arquivos que combina as fu
 
 O uso do FTPS e do SFTP é fundamental para garantir a segurança das transferências de arquivos. Esses protocolos fornecem uma camada adicional de proteção por meio da criptografia e autenticação robusta, protegendo os dados contra acessos não autorizados e ameaças cibernéticas. Além disso, eles são amplamente suportados por diversas plataformas e sistemas operacionais, tornando-os uma escolha conveniente para organizações de todos os tamanhos.
 
-## :dart: SINCRONIZAÇÃO DE TEMPO
+## SINCRONIZAÇÃO DE TEMPO
 
 A sincronização de tempo é uma parte fundamental das redes de computadores, garantindo que os dispositivos estejam alinhados em relação ao tempo. Isso é especialmente importante para tarefas como transações financeiras, registros de eventos e coordenação entre sistemas distribuídos. Nesse contexto, o NTP (Network Time Protocol) e o UDP 123 desempenham um papel crucial na sincronização precisa e confiável do tempo em redes.
 
