--- a/_posts/2025-06-26-001BlueTeam.md
+++ b/_posts/2025-06-26-001BlueTeam.md
@@ -3,86 +3,88 @@ title: "Blue Team: Introdução à Segurança da Informação – CIA, ameaças,
 date: 2025-06-26 16:30:00 -0300
 categories: [Blue Team, Nivel 1]
 tags: [Teorica]
-description: “Enquanto o Red Team pensa como o inimigo, o Blue Team protege como um guardião incansável.”
+description: “Não há defesa eficaz sem entender o que estamos tentando proteger.”
 image:
   path: /assets/img/000/capa.webp
   alt: Ilustração de um computador moderno com elementos de código e processamento
 ---
 
-# 🔵 O que é Blue Team?
+# 🔵 Blue Team: Introdução à Segurança da Informação
 
-O **Blue Team** é o grupo responsável pela **defesa cibernética** de uma organização. Sua missão é proteger sistemas, redes, aplicações e dados contra ameaças internas e externas, detectando, respondendo e mitigando ataques em tempo real.
-
-
-## 🎯 Objetivo
-
-Garantir a **resiliência e segurança contínua** do ambiente de TI, monitorando atividades, detectando anomalias e **respondendo rapidamente a incidentes de segurança**.
+A atuação de um profissional de Blue Team começa com a compreensão dos **fundamentos da Segurança da Informação**. Nesta introdução, você vai entender os pilares CIA, os tipos de ameaças, os riscos associados e os principais controles de proteção utilizados para manter os ambientes seguros.
 
 
-## 🛡️ Atividades Comuns
+## 🔐 O que é Segurança da Informação?
 
-- Monitoramento contínuo de redes e sistemas  
-- Análise e correlação de logs (com SIEMs)  
-- Detecção e resposta a incidentes (SOC, CSIRT)  
-- Threat Hunting (busca ativa por ameaças)  
-- Aplicação de patches e hardening de sistemas  
-- Gestão de vulnerabilidades  
-- Análise de malwares e forense digital  
-- Implementação de políticas e controles de segurança  
+Segurança da Informação é o conjunto de práticas, políticas e processos voltados para proteger dados e sistemas contra acessos não autorizados, danos, vazamentos e interrupções.
 
 
-## 🔄 Ciclo de Trabalho
+## 🧱 Princípios Fundamentais – Modelo **CIA**
 
-1. **Monitorar** (com ferramentas como SIEM e EDR)  
-2. **Detectar** comportamentos anômalos  
-3. **Responder** a incidentes rapidamente  
-4. **Recuperar** sistemas afetados  
-5. **Aprimorar** defesas com base no aprendizado
+O modelo CIA representa os **três pilares essenciais da segurança**:
 
+- **C – Confidencialidade (Confidentiality):**  
+  Garante que as informações sejam acessadas apenas por pessoas autorizadas.  
+  *Ex: Criptografia, autenticação de dois fatores.*
 
-## 🧠 Perfis do Time
+- **I – Integridade (Integrity):**  
+  Assegura que os dados não sejam alterados indevidamente, mantendo sua exatidão e confiabilidade.  
+  *Ex: Checksums, logs de auditoria, controle de versões.*
 
-- Analista SOC (níveis 1, 2 e 3)  
-- Analista de Resposta a Incidentes (CSIRT)  
-- Threat Hunter  
-- Especialista em Forense  
-- Blue Team Engineer / Security Analyst  
-- Profissionais com certificações como:  
-  - CompTIA Security+  
-  - GCIA, GCIH (SANS)  
-  - CEH (Certified Ethical Hacker)  
-  - Blue Team Level 1/2 (BTL1, BTL2)
+- **A – Disponibilidade (Availability):**  
+  Garante que os sistemas e dados estejam disponíveis sempre que necessário.  
+  *Ex: Backup, balanceamento de carga, redundância.*
 
 
-## 🛠️ Ferramentas Usadas
+## ⚠️ Tipos Comuns de Ameaças
 
-- **SIEMs**: Splunk, ELK, QRadar, Microsoft Sentinel  
-- **EDR/XDR**: CrowdStrike, SentinelOne, Microsoft Defender  
-- **SOAR**: Cortex XSOAR, IBM Resilient  
-- **Forense**: Autopsy, Volatility, FTK  
-- **Análise de Tráfego**: Wireshark, Zeek, Suricata  
-- **Gestão de vulnerabilidades**: Nessus, Qualys, OpenVAS
+Uma **ameaça** é qualquer evento ou agente que tenha o potencial de causar dano à informação ou aos sistemas.
 
-
-## 🤝 Relação com Outros Times
-
-- **Red Team (🔴):** Testa as defesas da equipe azul com ataques simulados  
-- **Purple Team (🟣):** Integra Red + Blue para melhorar continuamente ambos  
-- **White Team (⚪):** Supervisiona e define as regras dos exercícios  
+- **Malwares:** vírus, worms, trojans, ransomware  
+- **Ataques de rede:** DDoS, sniffing, spoofing  
+- **Ameaças internas:** usuários mal-intencionados ou negligentes  
+- **Phishing e engenharia social**  
+- **Vulnerabilidades exploradas (zero-day, exploits)**
 
 
-## 📚 Frameworks e Referências
+## 🎯 Risco em Segurança
 
-- **MITRE ATT&CK for Defense**  
-- NIST 800-61 (Guia de Resposta a Incidentes)  
-- CIS Controls v8  
-- NIST CSF (Cybersecurity Framework)
+**Risco = Ameaça × Vulnerabilidade × Impacto**
+
+O risco é a **probabilidade de um incidente ocorrer**, levando em conta a existência de vulnerabilidades e o impacto que isso pode gerar.
+
+*Exemplo:*  
+Um servidor exposto à internet sem patch é uma vulnerabilidade. Se uma ameaça conhecida explorar essa falha, o risco é elevado.
 
 
-## ✅ Benefícios para a Organização
+## 🛡️ Controles de Segurança
 
-- Redução de tempo de resposta a incidentes  
-- Menor risco de vazamentos e perdas de dados  
-- Detecção precoce de ameaças  
-- Resiliência operacional frente a ataques  
-- Melhoria contínua da postura de segurança
+Os **controles** são mecanismos implementados para reduzir riscos, prevenir, detectar ou responder a incidentes.
+
+### 🔒 Tipos de Controles:
+
+- **Preventivos:** impedem que incidentes ocorram  
+  *Ex: Firewall, autenticação multifator, políticas de senha*
+
+- **Detectivos:** identificam que algo está acontecendo  
+  *Ex: SIEM, IDS, logs, alertas*
+
+- **Corretivos:** minimizam o dano após um incidente  
+  *Ex: Backup, plano de resposta a incidentes, restauração de sistemas*
+
+- **Deterrentes:** desestimulam ações maliciosas  
+  *Ex: Câmeras, avisos de monitoramento, políticas visíveis*
+
+
+## 🧠 Por que isso é importante para o Blue Team?
+
+Um analista Blue Team deve conhecer profundamente esses fundamentos para:
+
+- Compreender e classificar incidentes de forma adequada  
+- Escolher os controles certos para cada tipo de risco  
+- Monitorar eventos com foco em ameaças reais  
+- Aplicar boas práticas com base no modelo CIA  
+
+
+
+
