--- a/_posts/2025-06-26-002BlueTeam.md
+++ b/_posts/2025-06-26-002BlueTeam.md
@@ -1,88 +1,89 @@
 ---
-title: "Fundamentos de Redes (modelo OSI, IP, DNS, HTTP, TCP/UDP)"
+title: "Blue Team: Fundamentos de Redes (modelo OSI, IP, DNS, HTTP, TCP/UDP)"
 date: 2025-06-26 16:30:00 -0300
 categories: [Blue Team, Nivel 1]
 tags: [Teorica]
-description: “Enquanto o Red Team pensa como o inimigo, o Blue Team protege como um guardião incansável.”
+description: “A base de toda defesa é entender como o tráfego legítimo se comporta.”
 image:
   path: /assets/img/000/capa.webp
   alt: Ilustração de um computador moderno com elementos de código e processamento
 ---
 
-# 🔵 O que é Blue Team?
+# 🔵 Blue Team: Fundamentos de Redes
 
-O **Blue Team** é o grupo responsável pela **defesa cibernética** de uma organização. Sua missão é proteger sistemas, redes, aplicações e dados contra ameaças internas e externas, detectando, respondendo e mitigando ataques em tempo real.
-
-
-## 🎯 Objetivo
-
-Garantir a **resiliência e segurança contínua** do ambiente de TI, monitorando atividades, detectando anomalias e **respondendo rapidamente a incidentes de segurança**.
+Para atuar de forma eficaz na defesa cibernética, um profissional Blue Team precisa compreender os **fundamentos das redes**. Esses conhecimentos são essenciais para analisar tráfego, detectar comportamentos anômalos e identificar ameaças que se propagam pela rede.
 
 
-## 🛡️ Atividades Comuns
+## 🧱 Modelo OSI – A Estrutura da Comunicação
 
-- Monitoramento contínuo de redes e sistemas  
-- Análise e correlação de logs (com SIEMs)  
-- Detecção e resposta a incidentes (SOC, CSIRT)  
-- Threat Hunting (busca ativa por ameaças)  
-- Aplicação de patches e hardening de sistemas  
-- Gestão de vulnerabilidades  
-- Análise de malwares e forense digital  
-- Implementação de políticas e controles de segurança  
+O **modelo OSI** (Open Systems Interconnection) divide a comunicação em **7 camadas**, facilitando a análise de como os dados trafegam.
 
-
-## 🔄 Ciclo de Trabalho
-
-1. **Monitorar** (com ferramentas como SIEM e EDR)  
-2. **Detectar** comportamentos anômalos  
-3. **Responder** a incidentes rapidamente  
-4. **Recuperar** sistemas afetados  
-5. **Aprimorar** defesas com base no aprendizado
+| Camada | Nome                      | Função Principal                                |
+|--------|---------------------------|--------------------------------------------------|
+| 7      | Aplicação                 | Interação com o usuário (HTTP, DNS, FTP)         |
+| 6      | Apresentação              | Criptografia, compressão (TLS, JPEG)             |
+| 5      | Sessão                    | Controle de sessões (RPC, NetBIOS)               |
+| 4      | Transporte                | Controle de fluxo (TCP, UDP)                     |
+| 3      | Rede                      | Roteamento e endereçamento (IP)                  |
+| 2      | Enlace de Dados           | MAC, switches, detecção de erros                 |
+| 1      | Física                    | Cabos, sinais, hubs                              |
 
 
-## 🧠 Perfis do Time
+## 🌐 Endereçamento IP (IPv4)
 
-- Analista SOC (níveis 1, 2 e 3)  
-- Analista de Resposta a Incidentes (CSIRT)  
-- Threat Hunter  
-- Especialista em Forense  
-- Blue Team Engineer / Security Analyst  
-- Profissionais com certificações como:  
-  - CompTIA Security+  
-  - GCIA, GCIH (SANS)  
-  - CEH (Certified Ethical Hacker)  
-  - Blue Team Level 1/2 (BTL1, BTL2)
+O endereço IP (Internet Protocol) identifica um dispositivo em uma rede.  
+Exemplo de IPv4: `192.168.0.10`
+
+- **Classe A, B, C**: categorias de endereços  
+- **IP privado:** não acessível da internet (ex: 192.168.x.x)  
+- **IP público:** utilizado para comunicação externa  
+- **Máscara de sub-rede:** define o tamanho da rede (ex: 255.255.255.0)
 
 
-## 🛠️ Ferramentas Usadas
+## 📡 Protocolo DNS
 
-- **SIEMs**: Splunk, ELK, QRadar, Microsoft Sentinel  
-- **EDR/XDR**: CrowdStrike, SentinelOne, Microsoft Defender  
-- **SOAR**: Cortex XSOAR, IBM Resilient  
-- **Forense**: Autopsy, Volatility, FTK  
-- **Análise de Tráfego**: Wireshark, Zeek, Suricata  
-- **Gestão de vulnerabilidades**: Nessus, Qualys, OpenVAS
+O **DNS (Domain Name System)** traduz nomes de domínio (ex: google.com) para endereços IP.
 
-
-## 🤝 Relação com Outros Times
-
-- **Red Team (🔴):** Testa as defesas da equipe azul com ataques simulados  
-- **Purple Team (🟣):** Integra Red + Blue para melhorar continuamente ambos  
-- **White Team (⚪):** Supervisiona e define as regras dos exercícios  
+- **Tipo de registro:** A (IPv4), AAAA (IPv6), MX (e-mail), TXT (SPF, DKIM)  
+- **Resolução direta e reversa**  
+- **Ataques comuns:** DNS spoofing, tunneling, amplification
 
 
-## 📚 Frameworks e Referências
+## 🌐 Protocolo HTTP/HTTPS
 
-- **MITRE ATT&CK for Defense**  
-- NIST 800-61 (Guia de Resposta a Incidentes)  
-- CIS Controls v8  
-- NIST CSF (Cybersecurity Framework)
+O **HTTP (Hypertext Transfer Protocol)** é o protocolo da web.  
+O **HTTPS** é a versão segura (com TLS).
+
+- **Métodos comuns:** GET, POST, PUT, DELETE  
+- **Códigos de resposta:**  
+  - 200 OK  
+  - 403 Forbidden  
+  - 404 Not Found  
+  - 500 Internal Server Error  
+- **Cabeçalhos importantes:** User-Agent, Host, Cookie  
 
 
-## ✅ Benefícios para a Organização
+## 🔁 Protocolos TCP e UDP
 
-- Redução de tempo de resposta a incidentes  
-- Menor risco de vazamentos e perdas de dados  
-- Detecção precoce de ameaças  
-- Resiliência operacional frente a ataques  
-- Melhoria contínua da postura de segurança
+### 🧩 TCP (Transmission Control Protocol)
+
+- Confiável (garante entrega)  
+- Utiliza o **three-way handshake** (SYN, SYN-ACK, ACK)  
+- Aplicações: HTTP, HTTPS, SSH, SMTP
+
+### 🧩 UDP (User Datagram Protocol)
+
+- Não confiável (sem garantia de entrega)  
+- Mais rápido, usado em streaming, DNS, VoIP  
+- Aplicações: DNS, DHCP, SNMP, NTP
+
+
+## 🛡️ Relevância para o Blue Team
+
+Dominar os conceitos de redes é essencial para:
+
+- Analisar **pacotes com Wireshark**  
+- Compreender alertas de **IDS/IPS (Snort, Suricata)**  
+- Criar **regras de detecção em SIEM**  
+- Monitorar tráfego anômalo e identificar **exfiltrações de dados**  
+- Investigar **técnicas de C2** e **comunicação maliciosa**
