--- a/_posts/2025-06-26-001BlueTeam.md
+++ b/_posts/2025-06-26-001BlueTeam.md
@@ -3,7 +3,7 @@ title: "Blue Team: Introdução à Segurança da Informação – CIA, ameaças,
 date: 2025-06-26 16:30:00 -0300
 categories: [Blue Team, Nivel 1]
 tags: [Teorica]
-description: “Não há defesa eficaz sem entender o que estamos tentando proteger.”
+description: "Não há defesa eficaz sem entender o que estamos tentando proteger."
 image:
   path: /assets/img/000/capa.webp
   alt: Ilustração de um computador moderno com elementos de código e processamento
