--- a/_posts/2025-06-26-002BlueTeam.md
+++ b/_posts/2025-06-26-002BlueTeam.md
@@ -3,7 +3,7 @@ title: "Blue Team: Fundamentos de Redes (modelo OSI, IP, DNS, HTTP, TCP/UDP)"
 date: 2025-06-26 16:30:00 -0300
 categories: [Blue Team, Nivel 1]
 tags: [Teorica]
-description: “A base de toda defesa é entender como o tráfego legítimo se comporta.”
+description: "A base de toda defesa é entender como o tráfego legítimo se comporta."
 image:
   path: /assets/img/000/capa.webp
   alt: Ilustração de um computador moderno com elementos de código e processamento
