--- a/_posts/2025-06-26-BlueTeamN1.md
+++ b/_posts/2025-06-26-BlueTeamN1.md
@@ -1422,13 +1422,13 @@ Eles são usados para **detecção**, **correlação** e **resposta a incidentes
 
 ### 1. SIEM (ex: Splunk, ELK, QRadar)
 
-!!!splunk
+```splunk
 index=windows process_name="certutil.exe"
-!!!
+```
 
-!!!splunk
+```splunk
 index=dns query="malicious-domain.com"
-!!!
+```
 
 ### 2. EDR (ex: CrowdStrike, SentinelOne)
 
@@ -1453,21 +1453,21 @@ Você pode integrar listas externas (feeds) com o SIEM para correlacionar evento
 
 **Busca no SIEM:**
 
-!!!splunk
+```splunk
 index=firewall src_ip="185.100.87.84"
-!!!
+```
 
 **IOC:** Hash SHA256 de malware
 
-!!!splunk
+```splunk
 index=edr file_hash="a7c5f7df123456..."
-!!!
+```
 
 **IOC:** Execução de PowerShell com base64
 
-!!!splunk
+```splunk
 index=sysmon process_name="powershell.exe" CommandLine="*base64*"
-!!!
+```
 
 ---
 
@@ -1542,9 +1542,9 @@ Cada tática contém **várias técnicas** e até **subtécnicas**.
 ### Técnica: T1059 – Command and Scripting Interpreter  
 Exemplos: `powershell`, `bash`, `cmd`, `python`, `wscript`
 
-!!!splunk
+```splunk
 index=sysmon EventCode=1 CommandLine="powershell*"
-!!!
+```
 
 ---
 
@@ -1575,9 +1575,9 @@ Suponha que você detecte a execução de `mshta.exe` com uma URL remota:
 - Tática: **Execution**  
 - Técnica: **T1218.005 – Mshta** (Signed Binary Proxy Execution)
 
-!!!splunk
+```splunk
 index=windows EventCode=4688 NewProcessName="*mshta.exe" CommandLine="*http*"
-!!!
+```
 
 O Blue Team pode buscar por esse IOC e correlacionar com outros como conexões DNS, C2 e coleta de dados para prever o próximo passo.
 
@@ -1644,25 +1644,25 @@ Inicia com uma hipótese, geralmente baseada em TTPs ou inteligência:
 
 > *"E se um atacante estiver usando PowerShell com base64 para manter persistência?"*
 
-!!!splunk
+```splunk
 index=sysmon EventCode=1 CommandLine="*powershell*" CommandLine="*base64*"
-!!!
+```
 
 ### 2. **IOC-based Hunting (baseado em indicadores)**  
 Busca por indicadores de ameaça (hash, IP, domínio) a partir de feeds ou relatórios.
 
-!!!splunk
+```splunk
 index=firewall src_ip="185.100.87.84"
-!!!
+```
 
 ### 3. **Analytics-Driven Hunting (baseado em análise de comportamento)**  
 Identifica anomalias nos dados, como processos incomuns, picos de atividade ou movimentações laterais.
 
-!!!splunk
+```splunk
 index=sysmon EventCode=3
 | stats count by dest_ip, user
 | where count > 50
-!!!
+```
 
 ---
 
@@ -1682,9 +1682,9 @@ index=sysmon EventCode=3
 
 Busca:
 
-!!!splunk
+```splunk
 index=sysmon EventCode=1 ParentImage="*winword.exe" CommandLine="*http*"
-!!!
+```
 
 ---
 
@@ -1759,25 +1759,25 @@ Inicia com uma hipótese, geralmente baseada em TTPs ou inteligência:
 
 > *"E se um atacante estiver usando PowerShell com base64 para manter persistência?"*
 
-!!!splunk
+```splunk
 index=sysmon EventCode=1 CommandLine="*powershell*" CommandLine="*base64*"
-!!!
+```
 
 ### 2. **IOC-based Hunting (baseado em indicadores)**  
 Busca por indicadores de ameaça (hash, IP, domínio) a partir de feeds ou relatórios.
 
-!!!splunk
+```splunk
 index=firewall src_ip="185.100.87.84"
-!!!
+```
 
 ### 3. **Analytics-Driven Hunting (baseado em análise de comportamento)**  
 Identifica anomalias nos dados, como processos incomuns, picos de atividade ou movimentações laterais.
 
-!!!splunk
+```splunk
 index=sysmon EventCode=3
 | stats count by dest_ip, user
 | where count > 50
-!!!
+```
 
 ---
 
@@ -1797,9 +1797,9 @@ index=sysmon EventCode=3
 
 Busca:
 
-!!!splunk
+```splunk
 index=sysmon EventCode=1 ParentImage="*winword.exe" CommandLine="*http*"
-!!!
+```
 
 ---
 
@@ -1921,7 +1921,7 @@ O sistema irá instalar todos os containers e serviços via Docker. Isso pode le
 
 Abra o navegador e acesse:
 
-!!!text
+```text
 https://<ip_da_vm>
 
 Credenciais:
@@ -1999,7 +1999,7 @@ Use um arquivo `.json` ou `.csv` com estrutura parecida com os logs reais.
 
 ### 📁 Exemplo de log simulado (`brute_force.json`):
 
-!!!json
+```json
 {
   "timestamp": "2025-06-27T15:42:00Z",
   "event_type": "authentication_failure",
@@ -2009,7 +2009,7 @@ Use um arquivo `.json` ou `.csv` com estrutura parecida com os logs reais.
   "system": "ssh",
   "log_level": "warning"
 }
-!!!
+```
 
 Copie esse evento várias vezes, variando o horário ou IP para parecer realista.
 
@@ -2021,7 +2021,7 @@ Copie esse evento várias vezes, variando o horário ou IP para parecer realista
 
 Crie um arquivo de configuração Logstash (`logstash-brute.conf`):
 
-!!!bash
+```bash
 input {
   file {
     path => "/caminho/brute_force.json"
@@ -2037,17 +2037,17 @@ output {
     index => "brute-simulado"
   }
 }
-!!!
+```
 
 Execute:
 
-!!!bash
+```bash
 logstash -f logstash-brute.conf
-!!!
+```
 
 ### Opção 2: via script Python com `requests`
 
-!!!python
+```python
 import json, requests
 
 with open('brute_force.json') as f:
@@ -2055,7 +2055,7 @@ with open('brute_force.json') as f:
 
 r = requests.post('http://localhost:9200/brute-simulado/_doc', json=data)
 print(r.status_code)
-!!!
+```
 
 ---
 
@@ -2074,9 +2074,9 @@ http://localhost:5601
 
 Você pode usar filtros como:
 
-!!!kql
+```kql
 event_type : "authentication_failure" AND username : "admin"
-!!!
+```
 
 ---
 
@@ -2153,15 +2153,15 @@ Exemplos de fontes:
 
 ### 1. Abrir o arquivo `.pcap`
 
-!!!bash
+```bash
 File > Open > emotet-infection-example.pcap
-!!!
+```
 
 ### 2. Aplicar filtros para tráfego HTTP
 
-!!!wireshark
+```wireshark
 http
-!!!
+```
 
 Observe requisições suspeitas como:
 
@@ -2174,9 +2174,9 @@ Observe requisições suspeitas como:
 
 ### 3. Filtrar apenas o tráfego do host infectado
 
-!!!wireshark
+```wireshark
 ip.addr == 192.168.1.101
-!!!
+```
 
 > Substitua pelo IP da máquina infectada no cenário simulado.
 
@@ -2184,9 +2184,9 @@ ip.addr == 192.168.1.101
 
 ### 4. Identificar beaconing / comunicação com C2
 
-!!!wireshark
+```wireshark
 tcp.port == 80 || tcp.port == 443
-!!!
+```
 
 Observe conexões frequentes para o mesmo IP, tamanho pequeno de pacotes, possíveis padrões de periodicidade (indicadores de **beaconing**).
 
@@ -2196,9 +2196,9 @@ Observe conexões frequentes para o mesmo IP, tamanho pequeno de pacotes, possí
 
 Se o malware fez download de arquivos `.exe` ou `.dll`, você pode exportá-los via:
 
-!!!text
+```text
 File > Export Objects > HTTP
-!!!
+```
 
 Salve os arquivos e, se quiser analisar com segurança, use uma sandbox isolada (como [Hybrid Analysis](https://www.hybrid-analysis.com)).
 
@@ -2276,7 +2276,7 @@ Exemplos para caça rápida:
 
 Exemplo de consulta para detectar execução de PowerShell com comandos codificados:
 
-!!!json
+```json
 GET /sysmon-*/_search
 {
   "query": {
@@ -2288,7 +2288,7 @@ GET /sysmon-*/_search
     }
   }
 }
-!!!
+```
 
 ---
 
