--- a/_posts/2025-06-26-BlueTeamN1.md
+++ b/_posts/2025-06-26-BlueTeamN1.md
@@ -5,7 +5,7 @@ categories: [Blue Team, Nivel 1]
 tags: [Teorica]
 description: ""
 image:
-  path: /assets/img/BlueTeamN1.png
+  path: /assets/img/BlueTeamN1.jpg
   alt: Ilustração de um computador moderno com elementos de código e processamento
 ---
 
