--- a/_posts/2025-06-26-BlueTeamN1.md
+++ b/_posts/2025-06-26-BlueTeamN1.md
@@ -1,9 +1,9 @@
 ---
-title: "Blue Team: O que é Blue Team ?"
+title: "Blue Team: Analista de Cibersegurança Júnior"
 date: 2025-06-26 16:30:00 -0300
 categories: [Blue Team, Nivel 1]
 tags: [Teorica]
-description: ""
+description: "Profissional em início de carreira, responsável por monitoramento básico, identificação preliminar de ameaças e suporte às operações de segurança. Atua seguindo procedimentos estabelecidos e orientações de profissionais mais experientes, desenvolvendo habilidades técnicas e conhecimento do ambiente de segurança."
 image:
   path: /assets/img/BlueTeamN1.png
   alt: Ilustração de um computador moderno com elementos de código e processamento
