--- a/_posts/2025-06-26-BlueTeamN2.md
+++ b/_posts/2025-06-26-BlueTeamN2.md
@@ -1,9 +1,9 @@
 ---
-title: "Blue Team:Evoluindo no Blue Team ?"
+title: "Blue Team: Analista de Cibersegurança Pleno"
 date: 2025-06-26 16:30:00 -0300
 categories: [Blue Team, Nivel 2]
 tags: [Teorica]
-description: ""
+description: "Profissional com experiência consolidada que realiza análises aprofundadas de incidentes, aplica ferramentas de detecção e resposta, além de colaborar na implementação de melhorias e políticas de segurança. Possui autonomia para tomar decisões táticas e participa ativamente da defesa contra ameaças."
 image:
   path: /assets/img/BlueTeamN2.png
   alt: Ilustração de um computador moderno com elementos de código e processamento
