--- a/_posts/2025-06-26-BlueTeamN3.md
+++ b/_posts/2025-06-26-BlueTeamN3.md
@@ -1,9 +1,9 @@
 ---
-title: "Blue Team:Evoluindo no Blue Team N3 ?"
+title: "Blue Team: Analista de Cibersegurança Sênior"
 date: 2025-06-26 16:30:00 -0300
 categories: [Blue Team, Nivel 3]
 tags: [Teorica]
-description: ""
+description: "Especialista com ampla experiência, responsável pelo planejamento estratégico, liderança técnica e coordenação das operações de segurança. Atua na definição de políticas, resposta a incidentes complexos e mentoring dos níveis inferiores, garantindo a robustez e evolução contínua da postura de segurança da organização."
 image:
   path: /assets/img/BlueTeamN2.png
   alt: Ilustração de um computador moderno com elementos de código e processamento
