--- a/_posts/2025-06-26-RedTeamN1.md
+++ b/_posts/2025-06-26-RedTeamN1.md
@@ -1,9 +1,9 @@
 ---
-title: "Red Team: O que é Red Team ?"
+title: "Red Team: Analista de Cibersegurança Júnior"
 date: 2025-06-26 16:30:00 -0300
 categories: [Red Team, Nivel 1]
 tags: [Teorica]
-description: "A principal função do Red Team não é quebrar sistemas, mas fortalecer a organização ao pensar como um adversário."
+description: "Profissional em fase inicial que apoia as atividades de simulação de ataques, realiza tarefas básicas de reconhecimento e testes preliminares de vulnerabilidades sob supervisão. Está focado em aprender técnicas de ofensiva, ferramentas e metodologias para entender o funcionamento dos sistemas alvo."
 image:
   path: /assets/img/000/capa.webp
   alt: Ilustração de um computador moderno com elementos de código e processamento
